[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/PizzaStation.gd" type="Script" id=1]

[node name="PizzaStation" type="Node2D"]
script = ExtResource( 1 )

[node name="Pans" type="Node2D" parent="."]
position = Vector2( 31.7839, 36.0218 )

[node name="VBoxContainer" type="VBoxContainer" parent="Pans"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Six" type="Button" parent="Pans/VBoxContainer" groups=[
"pizza_station_buttons",
"size_buttons",
]]
margin_right = 40.0
margin_bottom = 20.0
text = "6\""

[node name="Ten" type="Button" parent="Pans/VBoxContainer" groups=[
"pizza_station_buttons",
"size_buttons",
]]
margin_top = 34.0
margin_right = 40.0
margin_bottom = 54.0
text = "10\""

[node name="Twelve" type="Button" parent="Pans/VBoxContainer" groups=[
"pizza_station_buttons",
"size_buttons",
]]
margin_top = 68.0
margin_right = 40.0
margin_bottom = 88.0
text = "12\""

[node name="Fourteen" type="Button" parent="Pans/VBoxContainer" groups=[
"pizza_station_buttons",
"size_buttons",
]]
margin_top = 102.0
margin_right = 40.0
margin_bottom = 122.0
text = "14\""

[node name="Sauces" type="Node2D" parent="."]
position = Vector2( 51.9137, 328.434 )

[node name="VBoxContainer" type="VBoxContainer" parent="Sauces"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marinara" type="Button" parent="Sauces/VBoxContainer" groups=[
"pizza_station_buttons",
"sauce_buttons",
]]
margin_right = 87.0
margin_bottom = 20.0
text = "marinara"

[node name="Alfredo" type="Button" parent="Sauces/VBoxContainer" groups=[
"pizza_station_buttons",
"sauce_buttons",
]]
margin_top = 34.0
margin_right = 87.0
margin_bottom = 54.0
text = "alfredo"

[node name="Pesto" type="Button" parent="Sauces/VBoxContainer" groups=[
"pizza_station_buttons",
"sauce_buttons",
]]
margin_top = 68.0
margin_right = 87.0
margin_bottom = 88.0
text = "pesto"

[node name="Bbq" type="Button" parent="Sauces/VBoxContainer" groups=[
"pizza_station_buttons",
"sauce_buttons",
]]
margin_top = 102.0
margin_right = 87.0
margin_bottom = 122.0
text = "bbq"

[node name="Garlic" type="Button" parent="Sauces/VBoxContainer" groups=[
"pizza_station_buttons",
"sauce_buttons",
]]
margin_top = 136.0
margin_right = 87.0
margin_bottom = 156.0
text = "garlic sauce"

[node name="Toppings" type="Node2D" parent="."]
position = Vector2( 299.828, 430.142 )

[node name="GridContainer" type="GridContainer" parent="Toppings"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mushrooms" type="Button" parent="Toppings/GridContainer" groups=[
"pizza_station_buttons",
"toppings_buttons",
]]
margin_right = 89.0
margin_bottom = 20.0
text = "mushrooms"

[node name="Onions" type="Button" parent="Toppings/GridContainer" groups=[
"pizza_station_buttons",
"toppings_buttons",
]]
margin_left = 99.0
margin_right = 154.0
margin_bottom = 20.0
text = "onions"

[node name="Olives" type="Button" parent="Toppings/GridContainer" groups=[
"pizza_station_buttons",
"toppings_buttons",
]]
margin_left = 164.0
margin_right = 214.0
margin_bottom = 20.0
text = "olives"

[node name="Pineapple" type="Button" parent="Toppings/GridContainer" groups=[
"pizza_station_buttons",
"toppings_buttons",
]]
margin_left = 224.0
margin_right = 299.0
margin_bottom = 20.0
text = "pineapple"

[node name="Chikun" type="Button" parent="Toppings/GridContainer" groups=[
"pizza_station_buttons",
"toppings_buttons",
]]
margin_left = 309.0
margin_right = 366.0
margin_bottom = 20.0
text = "chik'un"

[node name="Basil" type="Button" parent="Toppings/GridContainer" groups=[
"pizza_station_buttons",
"toppings_buttons",
]]
margin_left = 376.0
margin_right = 418.0
margin_bottom = 20.0
text = "basil"

[node name="Cheeses" type="Node2D" parent="."]
position = Vector2( 248.974, 517.018 )

[node name="HBoxContainer" type="HBoxContainer" parent="Cheeses"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddCheeseButton" type="Button" parent="Cheeses/HBoxContainer"]
margin_right = 85.0
margin_bottom = 40.0
text = "add cheese"

[node name="Receipt" type="Node2D" parent="."]
position = Vector2( 193.882, 33.9028 )

[node name="VBoxContainer" type="VBoxContainer" parent="Receipt"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Receipt/VBoxContainer"]
margin_right = 169.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevReceipt" type="Button" parent="Receipt/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 20.0
text = "prev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextReceipt" type="Button" parent="Receipt/VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 20.0
text = "next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletedReceipt" type="Button" parent="Receipt/VBoxContainer/HBoxContainer"]
margin_left = 88.0
margin_right = 169.0
margin_bottom = 20.0
text = "completed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Receipt/VBoxContainer"]
margin_top = 24.0
margin_right = 169.0
margin_bottom = 54.0
text = "press <next> to load a receipt"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PizzaInProgress" type="Node2D" parent="."]
position = Vector2( 608.132, 40.2596 )

[node name="RichTextLabel" type="RichTextLabel" parent="PizzaInProgress"]
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompleteButton" type="Button" parent="PizzaInProgress"]
margin_left = -200.239
margin_top = 199.179
margin_right = -68.2387
margin_bottom = 219.179
text = "send pizza to oven"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaveStation" type="Button" parent="."]
margin_left = 912.198
margin_top = 15.892
margin_right = 1006.2
margin_bottom = 35.892
text = "leave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiscardPizzaInProgress" type="Button" parent="."]
margin_left = 911.139
margin_top = 54.0326
margin_right = 1005.14
margin_bottom = 74.0326
text = "start over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashMessage" type="Label" parent="."]
margin_left = 276.792
margin_top = 272.533
margin_right = 676.792
margin_bottom = 354.533
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashMessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
